force-app/main/default/objects/Event__c/fields/Abstract_Review_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Review_Deadline__c</fullName>
    <label>Abstract Review Deadline</label>
    <type>DateTime</type>
</CustomField>