force-app/main/default/objects/Event__c/fields/Abstract_Reviewers__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Reviewers__c</fullName>
    <label>Abstract Reviewers</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>