force-app/main/default/objects/Event__c/fields/Abstract_Submission__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Submission__c</fullName>
    <label>Abstract Submission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Submissions Open</fullName>
                <default>true</default>
                <label>All Submissions Open</label>
            </value>
            <value>
                <fullName>Invited Submission Open</fullName>
            </value>
            <value>
                <fullName>Public Submission Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>