force-app/main/default/objects/Event__c/fields/Abstract_Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Submission_Deadline__c</fullName>
    <label>Abstract Submission Deadline</label>
    <type>DateTime</type>
</CustomField>