force-app/main/default/objects/Event__c/fields/Active_Abstract_Review_Window__c.field-meta.xml
<CustomField>
    <fullName>Active_Abstract_Review_Window__c</fullName>
    <label>Active Abstract Review Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abstract Review</fullName>
            </value>
            <value>
                <fullName>Late Breaking Abstract Review</fullName>
            </value>
            <value>
                <fullName>Review Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>