force-app/main/default/objects/Event__c/fields/Active_Abstract_Submissions__c.field-meta.xml
<CustomField>
    <fullName>Active_Abstract_Submissions__c</fullName>
    <label>Active Abstract Submissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited Submission</fullName>
            </value>
            <value>
                <fullName>Public Submission</fullName>
            </value>
            <value>
                <fullName>Late Breaking Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>