force-app/main/default/objects/Event__c/fields/App_Supported_By__c.field-meta.xml
<CustomField>
    <fullName>App_Supported_By__c</fullName>
    <label>App Supported By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>