force-app/main/default/objects/Event__c/fields/Cancellation_Deadline_1__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Deadline_1__c</fullName>
    <label>Cancellation Deadline 1</label>
    <type>DateTime</type>
</CustomField>