force-app/main/default/objects/Event__c/fields/Cancellation_Deadline_2__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Deadline_2__c</fullName>
    <label>Cancellation Deadline 2</label>
    <type>DateTime</type>
</CustomField>