force-app/main/default/objects/Event__c/fields/Certificate_Link__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Link__c</fullName>
    <label>Certificate Link</label>
    <type>Url</type>
</CustomField>