force-app/main/default/objects/Event__c/fields/Congress_Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>Congress_Badge_Name__c</fullName>
    <defaultValue>(&quot;Congress of the European Academy of Neurolog&quot;)</defaultValue>
    <label>Congress Badge Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>