force-app/main/default/objects/Event__c/fields/Congress_Number__c.field-meta.xml
<CustomField>
    <fullName>Congress_Number__c</fullName>
    <label>Congress Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>