force-app/main/default/objects/Event__c/fields/Congress_Postfix__c.field-meta.xml
<CustomField>
    <fullName>Congress_Postfix__c</fullName>
    <defaultValue>(&quot;th&quot;)</defaultValue>
    <label>Event Postfix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>