force-app/main/default/objects/Event__c/fields/deleted_group__c.field-meta.xml
<CustomField>
    <fullName>deleted_group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>deleted_group</label>
    <type>Checkbox</type>
</CustomField>