force-app/main/default/objects/Event__c/fields/description_group__c.field-meta.xml
<CustomField>
    <fullName>description_group__c</fullName>
    <label>description_group</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>