force-app/main/default/objects/Event__c/fields/Early_Bird_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Early_Bird_Deadline__c</fullName>
    <label>Early Bird Deadline</label>
    <type>DateTime</type>
</CustomField>