force-app/main/default/objects/Event__c/fields/External_Participants__c.field-meta.xml
<CustomField>
    <fullName>External_Participants__c</fullName>
    <description>Store external users email which welcome to the meeting</description>
    <label>External Participants</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>