force-app/main/default/objects/Event__c/fields/geo_manual__c.field-meta.xml
<CustomField>
    <fullName>geo_manual__c</fullName>
    <label>geo_manual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>