force-app/main/default/objects/Event__c/fields/Host_URL__c.field-meta.xml
<CustomField>
    <fullName>Host_URL__c</fullName>
    <label>Host URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>