force-app/main/default/objects/Event__c/fields/Invited_Abstract_Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Invited_Abstract_Submission_Deadline__c</fullName>
    <label>Invited Abstract Submission Deadline</label>
    <type>DateTime</type>
</CustomField>