force-app/main/default/objects/Event__c/fields/Join_URL__c.field-meta.xml
<CustomField>
    <fullName>Join_URL__c</fullName>
    <description>join URL to meeting</description>
    <label>Join URL</label>
    <type>Url</type>
</CustomField>