force-app/main/default/objects/Event__c/fields/Late_Breaking_Review_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Late_Breaking_Review_Deadline__c</fullName>
    <label>Late Breaking Review Deadline</label>
    <type>DateTime</type>
</CustomField>