force-app/main/default/objects/Event__c/fields/LogMeIn_Owner_Key__c.field-meta.xml
<CustomField>
    <fullName>LogMeIn_Owner_Key__c</fullName>
    <label>LogMeIn Owner Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>