force-app/main/default/objects/Event__c/fields/Marketing_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Name__c</fullName>
    <defaultValue>(&quot;Congress of the European Academy of Neurolog&quot;)</defaultValue>
    <label>Marketing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>