force-app/main/default/objects/Event__c/fields/Number_of_Reviewers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reviewers__c</fullName>
    <inlineHelpText>Public abstracts will be reviewed by how many reviewers?</inlineHelpText>
    <label>Number of Reviewers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>