force-app/main/default/objects/Event__c/fields/Number_of_Reviewers_Late_Breaking__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reviewers_Late_Breaking__c</fullName>
    <inlineHelpText>Late breaking abstracts will be reviewed by how many reviewers?</inlineHelpText>
    <label>Number of Reviewers (Late Breaking)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>