force-app/main/default/objects/Event__c/fields/old_container_id_group__c.field-meta.xml
<CustomField>
    <fullName>old_container_id_group__c</fullName>
    <label>old_container_id_group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>