force-app/main/default/objects/Event__c/fields/Registrations__c.field-meta.xml
<CustomField>
    <fullName>Registrations__c</fullName>
    <label>Registrations</label>
    <summaryFilterItems>
        <field>Participant__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>Participant__c.Event_custom__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>