force-app/main/default/objects/Event__c/fields/street1__c.field-meta.xml
<CustomField>
    <fullName>street1__c</fullName>
    <label>street1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>