force-app/main/default/objects/Event__c/fields/telephone__c.field-meta.xml
<CustomField>
    <fullName>telephone__c</fullName>
    <label>telephone</label>
    <type>Phone</type>
</CustomField>