force-app/main/default/objects/Event__c/fields/Unique_Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Meeting_Id__c</fullName>
    <description>Stores a unique meeting identifier from the GoToMeeting system</description>
    <label>Unique Meeting Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>