force-app/main/default/objects/Event__c/fields/use_in_netkey_committee_rule_group__c.field-meta.xml
<CustomField>
    <fullName>use_in_netkey_committee_rule_group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>use_in_netkey_committee_rule_group</label>
    <type>Checkbox</type>
</CustomField>