force-app/main/default/objects/Event__c/fields/Wi_Fi_Name__c.field-meta.xml
<CustomField>
    <fullName>Wi_Fi_Name__c</fullName>
    <label>Wi-Fi Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>