force-app/main/default/objects/Event__c/fields/Wi_Fi_Supported_By__c.field-meta.xml
<CustomField>
    <fullName>Wi_Fi_Supported_By__c</fullName>
    <label>Wi-Fi Supported By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>