force-app/main/default/objects/Event__c/recordTypes/G2M.recordType-meta.xml
<RecordType>
    <fullName>G2M</fullName>
    <active>true</active>
    <label>G2M</label>
</RecordType>