force-app/main/default/objects/Event__c/validationRules/Late_Breaking_Submission.validationRule-meta.xml
<ValidationRule>
    <fullName>Late_Breaking_Submission</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES(Active_Abstract_Submissions__c , &quot;Public Submission&quot;) &amp;&amp; INCLUDES(Active_Abstract_Submissions__c , &quot;Late Breaking Submission&quot;)</errorConditionFormula>
    <errorDisplayField>Active_Abstract_Submissions__c</errorDisplayField>
    <errorMessage>Public and Late Breaking Submission cannot be open at the same time</errorMessage>
</ValidationRule>