force-app/main/default/objects/Event__c/listViews/Congress_Events.listView-meta.xml
<ListView>
    <fullName>Congress_Events</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Address__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Duration__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event__c.Congress</value>
    </filters>
    <label>Congress Events</label>
</ListView>