force-app/main/default/objects/Event__c/listViews/G2M.listView-meta.xml
<ListView>
    <fullName>G2M</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event__c.G2M</value>
    </filters>
    <label>G2M</label>
</ListView>