force-app/main/default/objects/Event__c/listViews/Scheduled_Congresses.listView-meta.xml
<ListView>
    <fullName>Scheduled_Congresses</fullName>
    <columns>NAME</columns>
    <columns>Duration__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event__c.Congress</value>
    </filters>
    <label>Scheduled Congresses</label>
</ListView>